--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,7 @@ h1 {
   padding: 18px 18px 0 18px;
   /* Top, right, bottom, left */
 }
+
+.font-date {
+  font-family: 'Sometype Mono', 'monospace';
+}
