--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,14 @@ main {
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 90px;
 }
 
 /* utility */
 
 .square-image {
-  width: 100%;
+  width: 600px;
   height: auto;
-  aspect-ratio: 1 / 1;
 }
 
 .myPadding {
