--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ header {
 
 main {
   background-image: url(../img/cork.png);
+  padding-bottom: 50px;
 }
 
 h1 {
@@ -41,11 +42,23 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  z-index: 1;
+  z-index: 2;
 }
 
 .center-img {
-  max-width: 60%;
-  max-height: 60%;
+  max-width: 80%;
+  max-height: 80%;
   object-fit: contain;
+}
+
+.myShadow {
+  transition: transform 0.3s ease;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.7);
+}
+
+.myShadow:hover {
+  transform: scale(1.2) rotate(10deg);
+  box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.9);
+  z-index: 1;
+  cursor: pointer;
 }
